# data-engineering-bootcamp

./: .gitignore
00-bootcamp-project/: docker-compose.yaml  helper.py  load_data_to_bigquery.py  load_data_to_gcs_then_bigquery.py  pyproject.toml  utility.py
00-bootcamp-project/dags/: greenery_addresses_data_pipeline.py  greenery_dbt_dag.py  greenery_events_data_pipeline.py  greenery_order_items_data_pipeline.py  greenery_orders_data_pipeline.py  greenery_products_data_pipeline.py  greenery_promos_data_pipeline.py  greenery_users_data_pipeline.py
00-bootcamp-project/dbt/greenery/: .user.yml  dbt_project.yml  profiles.yml
00-bootcamp-project/dbt/greenery/models/staging/greenery/: _models.yml  stg_greenery__user.sql
00-bootcamp-project/extract/: main-api.py  main-postgres.py
00-bootcamp-project/load_to_bigquery/: load_data_to_bigquery.py  load_helper.py  test.py
01-introduction-to-data-engineering/workshops/data-engineering-lifecycle/: dogs.json  main.py
03-data-lake-with-google-cloud-storage/examples/uploading-to-gcs/: main.py  pyproject.toml  scraping.py
04-data-pipelines-with-apache-airflow/dags/: 8_30_tuesday.py  dag_with_custom_task_dependencies.py  every_monday.py  every_month.py  everyday.py  my_first_dag.py  play_with_airflow_connections_and_hooks.py  play_with_templating.py
05-analytics-engineering/workshop/greenery/models/: my_events.sql  my_users.sql
05-analytics-engineering/workshop/greenery/models/staging/greenery/: _src.yml
my-project/: main.py  pyproject.toml
